2016-06-20  Simon Fraser  <simon.fraser@apple.com>

        [iOS] Typing text into a text field or text area causes screen to scroll down (hiding text entry)
        https://bugs.webkit.org/show_bug.cgi?id=158970

        Reviewed by Ryosuke Niwa.

        Test that focuses an input in a frame and then types a character, then checks for scrolling.

        * fast/forms/ios/typing-in-input-in-iframe-expected.txt: Added.
        * fast/forms/ios/typing-in-input-in-iframe.html: Added.

2016-06-20  Simon Fraser  <simon.fraser@apple.com>

        Focus event dispatched in iframe causes parent document to scroll incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=158629
        rdar://problem/26521616

        Reviewed by Tim Horton.

        * fast/forms/ios/focus-input-in-iframe-expected.txt: Added.
        * fast/forms/ios/focus-input-in-iframe.html: Added.
        * fast/forms/ios/programmatic-focus-input-in-iframe-expected.txt: Added.
        * fast/forms/ios/programmatic-focus-input-in-iframe.html: Added.

2016-06-21  Alexey Proskuryakov  <ap@apple.com>

        Add an expectation for another copy of fast/canvas/webgl/premultiplyalpha-test.html

        * platform/mac/TestExpectations:

2016-06-21  Alexey Proskuryakov  <ap@apple.com>

        Update Sierra test expectations for fast/canvas/webgl/premultiplyalpha-test.html

        * platform/mac/TestExpectations:

2016-06-21  Frederic Wang  <fwang@igalia.com>

        Implement RenderMathMLOperator::layoutBlock
        https://bugs.webkit.org/show_bug.cgi?id=157521

        Reviewed by Brent Fulgham.

        Update some tests to take into account improved width computation and how the anonymous text
        node of operators using MathOperator is layout.

        * platform/gtk/mathml/opentype/horizontal-expected.txt:
        * platform/gtk/mathml/opentype/horizontal-munderover-expected.txt:
        * platform/gtk/mathml/opentype/large-operators-expected.txt: