@@ -1,0 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+</head>
+<body>
+This test makes sure that CJK characters styled with font-family: cursive aren't italicized.
+<div>
+<span style="font-size: 50px;">Look at this character: </span><span style="font-family: cursive;">年</span>
+</div>
+</body>
+</html>
