@@ -1379,6 +1379,8 @@ webkit.org/b/158534 css3/filters/backdrop/dynamic-backdrop-filter-change.html [ 
 # These tests hardcode platform-specific font aliases.
 webkit.org/b/158649 [ Yosemite ] fast/text/chinese-font-name-aliases.html [ ImageOnlyFailure ]
 webkit.org/b/158649 [ ElCapitan+ ] fast/text/chinese-font-name-aliases-2.html [ ImageOnlyFailure ]
+webkit.org/b/159003 [ Sierra+ ] fast/text/font-cursive-italic-cjk.html [ ImageOnlyFailure ]
+webkit.org/b/159003 [ Yosemite ElCapitan ] fast/text/font-cursive-italic-cjk-2.html [ ImageOnlyFailure ]
 
 webkit.org/b/158889 media/video-controls-show-on-kb-or-ax-event.html [ Pass Failure ]
 
@@ -1453,3 +1455,4 @@ webkit.org/b/158889 media/video-controls-show-on-kb-or-ax-event.html [ Pass Fail
 # rdar://problem/26924977
 [ Sierra+ ] fast/canvas/webgl/premultiplyalpha-test.html [ Failure ]
 [ Sierra+ ] webgl/1.0.2/conformance/context/premultiplyalpha-test.html [ Failure ]
+
