@@ -1,3 +1,15 @@
+2016-06-21  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        Test gardening for platform-specific font-fallback on macOS Sierra
+        https://bugs.webkit.org/show_bug.cgi?id=159003
+        <rdar://problem/25807529>
+
+        Unreviewed.
+
+        * fast/text/font-cursive-italic-cjk-2-expected.html: Added.
+        * fast/text/font-cursive-italic-cjk-2.html: Added.
+        * platform/mac/TestExpectations:
+
 2016-06-20  Simon Fraser  <simon.fraser@apple.com>
 
         [iOS] Typing text into a text field or text area causes screen to scroll down (hiding text entry)
